Fixing some layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ button {
   margin: 10px;
   padding: 5px;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 table{
